@@ -1,6 +1,7 @@
 					MathGL (for v.1.11.*)
 
-b. Colorbar: add grid for label values
+c. Colorbar: print more digits for manual arrays ... but avoid overlapping
+b. Colorbar: add grid for label values; check that labels must be at top!
 a. Save InPlot information in OI[] (i.e. like ObjId) -- fill rectangle then inplot is called.
 0. Miss MAJOR labels or decrease its fontsize if labels too close.
 	Also check that enough digits is printed to distingush the labels
@@ -14,6 +15,8 @@ a. Save InPlot information in OI[] (i.e. like ObjId) -- fill rectangle then inpl
 
 6. \dfrac for normal size and centering ???
 7. "Chaos" in area.png (near axis) ???
+
+8. MGL options -- add argument parsing !!!
 
 
 					MathGL (for v.2.?) ???
