@@ -948,32 +948,35 @@ void mglParse::ProcOpt(mglGraph *gr, wchar_t *str)
 			n=mglFindArg(s);
 			if(n<1)	return;
 			s[n]=0;		a=s;	s=s+n+1;	wcstrim_mgl(a);
-			mreal ff = wcstod(s,0);
+			mglData bb,ss;
+			bb = mglFormulaCalc(s, this);
+			mreal ff = bb.a[0];
 			if(!wcscmp(a+1,L"range"))
 			{
 				n=mglFindArg(s);	if(n<1)	return;
 				s[n]=0;		b=s;	s=s+n+1;	wcstrim_mgl(b);
+				bb = mglFormulaCalc(b, this);	ss = mglFormulaCalc(s, this);
 				if(a[0]=='x')
 				{
-					opt[0]=true;	gr->Min.x = wcstod(b,0);	gr->Max.x = wcstod(s,0);
+					opt[0]=true;	gr->Min.x = bb.a[0];	gr->Max.x = ss.a[0];
 					if(out)	mglprintf(buf,256,L"{mreal tx1=gr->Min.x, tx2=gr->Max.x;\tgr->Min.x=%g;\tgr->Max.x=%g;", wcstod(b,0), wcstod(s,0));
 					wcscat(op1,buf);
 				}
 				else if(a[0]=='y')
 				{
-					opt[1]=true;	gr->Min.y = wcstod(b,0);	gr->Max.y = wcstod(s,0);
+					opt[1]=true;	gr->Min.y = bb.a[0];	gr->Max.y = ss.a[0];
 					if(out)	mglprintf(buf,256,L"{mreal ty1=gr->Min.y, ty2=gr->Max.y;\tgr->Min.y=%g;\tgr->Max.y=%g;", wcstod(b,0), wcstod(s,0));
 					wcscat(op1,buf);
 				}
 				else if(a[0]=='z')
 				{
-					opt[2]=true;	gr->Min.z = wcstod(b,0);	gr->Max.z = wcstod(s,0);
+					opt[2]=true;	gr->Min.z = bb.a[0];	gr->Max.z = ss.a[0];
 					if(out)	mglprintf(buf,256,L"{mreal tz1=gr->Min.z, tz2=gr->Max.z;\tgr->Min.z=%g;\tgr->Max.z=%g;", wcstod(b,0), wcstod(s,0));
 					wcscat(op1,buf);
 				}
 				else if(a[0]=='c')
 				{
-					opt[3]=true;	gr->Cmin = wcstod(b,0);		gr->Cmax = wcstod(s,0);
+					opt[3]=true;	gr->Cmin = bb.a[0];		gr->Cmax = ss.a[0];
 					if(out)	mglprintf(buf,256,L"{mreal tc1=gr->Cmin, tc2=gr->Cmax;\tgr->Cmin=%g;\tgr->Cmax=%g;", wcstod(b,0), wcstod(s,0));
 					wcscat(op1,buf);
 				}
@@ -1020,7 +1023,7 @@ void mglParse::ProcOpt(mglGraph *gr, wchar_t *str)
 				if(out)	mglprintf(buf,256,L"{mreal tad=gr->MarkSize;\tgr->MarkSize=%g/50;", ff);
 				wcscat(op1,buf);
 			}
-			else if(!wcscmp(a,L"legend"))
+			else if(!wcscmp(a,L"legend"))	// TODO: parsing of string tail (other options???)
 			{
 				b = wcschr(s+1,'\'');	if(b)	*b=0;
 				opt[10]=true;	wcscpy(leg,s+1);
